<resources>
    <string name="accessibility_phone_four_bars">Phone four bars.</string>
    <string name="gps_notification_searching_message">To get a better GPS signal, orient your device with its face up and in a horizontal position.</string>
    <string name="airplane_mode">Airplane mode</string>
    <string name="airplanemode_toast_on">Turning on airplane mode</string>
    <string name="airplanemode_toast_off">Turning off airplane mode</string>
    <string name="autorotate_mode">Auto-rotate</string>
    <string name="autorotate_toast_on">Turning on auto-rotate screen</string>
    <string name="autorotate_toast_off">Turning off auto-rotate screen</string>
    <string name="autosync_mode">Auto-sync</string>
    <string name="autosync_toast_on">Turning on auto-sync</string>
    <string name="autosync_toast_off">Turning off auto-sync</string>
    <string name="bluetooth_mode">Bluetooth</string>
    <string name="bluetooth_toast_on">Turning on Bluetooth</string>
    <string name="bluetooth_toast_off">Turning off Bluetooth</string>
    <string name="powersaving_mode">Power saving</string>
    <string name="balanced_mode">Balanced</string>
    <string name="normalspeed_mode">Performance</string>
    <string name="empty_str" />
    <string name="gps_mode">GPS</string>
    <string name="gps_toast_on">Turning on GPS</string>
    <string name="gps_toast_off">Turning off GPS</string>
    <string name="silent_mode">Silent mode</string>
    <string name="silent_toast_on">Turning on silent mode</string>
    <string name="silent_toast_off">Turning off silent mode</string>
    <string name="wifi_mode">Wi-Fi</string>
    <string name="wifi_toast_on">Turning on Wi-Fi</string>
    <string name="wifi_toast_off">Turning off Wi-Fi</string>
    <string name="wifisharing_mode">Wi-Fi hotspot</string>
    <string name="wifisharing_toast_on">Turning on Wi-Fi hotspot</string>
    <string name="wifisharing_toast_off">Turning off Wi-Fi hotspot</string>
    <string name="ethernet_description">Ethernet</string>
    <string name="autolight_toast_on">Turning on automatic brightness</string>
    <string name="autolight_toast_off">Turning off automatic brightness</string>
    <string name="highbrightness_toast_on">Switch to outdoor mode for outdoor readability</string>
    <string name="highbrightness_toast_off">Switch to normal mode to save more power</string>
    <string name="splendid_mode">Reading mode</string>
    <string name="splendid_toast_on">Turning on reading mode</string>
    <string name="splendid_toast_off">Turning off reading mode</string>
    <string name="super_ips">Super IPS+ mode (Outdoor)</string>
    <string name="normal_ips">IPS mode</string>
    <string name="powersavingmode_toast_on">Turning on Power saving mode...</string>
    <string name="normalspeedmode_toast_on">Turning on Performance mode...</string>
    <string name="balancedmode_toast_on">Turning on Balanced mode...</string>
    <string name="system_bar_locked">System bar is locked</string>
    <string name="system_bar_unlocked">System bar is unlocked</string>
    <string name="memory_size">Total space</string>
    <string name="storage_name">Storage name</string>
    <string name="open_storage_files">Open</string>
    <string name="unmount_storage">Unmount</string>
    <string name="instant_dic">Instant Dictionary</string>
    <string name="instant_dic_toast_on">Enable Instant Dictionary</string>
    <string name="instant_dic_toast_off">Disable Instant Dictionary</string>
    <string name="mobiledata_mode">Mobile data</string>
    <string name="mobiledata_toast_on">Turning on mobile data.</string>
    <string name="mobiledata_toast_off">Turning off mobile data</string>
    <string name="powersaving2_mode">Smart saving</string>
    <string name="powersaving2_toast_on">Turning on smart saving</string>
    <string name="powersaving2_toast_off">Turning off smart saving</string>
    <string name="nfc_mode">NFC</string>
    <string name="nfc_toast_on">Turning on NFC</string>
    <string name="nfc_toast_off">Turning off NFC</string>
    <string name="vibrate_mode">Vibrate</string>
    <string name="vibrate_mode_toast">Vibrate mode</string>
    <string name="mute_mode">Mute</string>
    <string name="mute_mode_toast">Mute mode</string>
    <string name="volume_mode">Sound</string>
    <string name="volume_mode_toast">Sound mode</string>
    <string name="onehand_mode">One hand operation</string>
    <string name="onehand_toast_on">Turning on one hand operation</string>
    <string name="onehand_toast_off">Turning off one hand operation</string>
    <string name="quick_launch_clear_dialog_title">Clear</string>
    <string name="asus_quick_setting_miracast_title">Cast screen</string>
    <string name="asus_quick_setting_playto_title">PlayTo</string>
    <string name="asus_quick_setting_audio_title">AudioWizard</string>
    <string name="asus_notification_title">Welcome Loli Pop</string>
    <string name="asus_quicksettings_title">Quick settings</string>
    <string name="glove_mode">Glove mode</string>
    <string name="glove_toast_on">Turning on glove mode</string>
    <string name="glove_toast_off">Turning off glove mode</string>
    <string name="do_not_disturb">Do not disturb</string>
    <string name="sim_prompt_user">Always ask</string>
    <string name="asus_whats_next_title">"What's Next"</string>
    <string name="miracast_toast_on">Turning on Miracast</string>
    <string name="miracast_toast_off">Turning off Miracast</string>
    <string name="ext_media_nomedia_notification_title">External storage has removed</string>
    <string name="ext_media_nomedia_notification_message">External storage removed</string>
    <string name="mount_notif_context">External storage</string>
    <string name="asus_quickbox_camera">Camera</string>
    <string name="asus_quickbox_calculator">Calculator</string>
    <string name="asus_quickbox_flashlight">Flashlight</string>
    <string name="asus_quickbox_quickmemo">Quick memo</string>
    <string name="asus_quickbox_dictionary">Dictionary</string>
    <string name="asus_quickbox_sound">Sound recorder</string>
    <string name="asus_quickbox_fmradio">FM Radio</string>
    <string name="user_owner">Owner</string>
    <string name="asus_quickbox_free_memory">Free memory</string>
    <string name="asus_quickbox_boost">Boost</string>
    <string name="asus_quickbox_greater_than_1GB">＞1 GB</string>
    <string name="asus_quickbox_mirror">Mirror</string>
    <string name="asus_quickbox_screenshot">Screenshot</string>
    <string name="toast_contents">This app only supports full screen mode</string>
    <string name="toast_contents2">Background app only supports full screen mode</string>
    <string name="dual_apps_mode">Dual apps</string>
    <string name="dual_apps_toast_on">Turning on dual apps</string>
    <string name="dual_apps_toast_off">Turning off dual apps</string>
    <string name="recent_clear_app_button">Clear all</string>
    <string name="mount_notif_tickerText">@*android:string/external_ep_storage_checking_notification_title</string>
    <string name="mount_sdcard_notif_context">MicroSD</string>
    <string name="mount_usbdisk1_notif_context">USBdisk1</string>
    <string name="mount_usbdisk2_notif_context">USBdisk2</string>
    <string name="mount_sdreader_notif_context">SD</string>
    <string name="mount_notif_title">@*android:string/external_ep_storage_mount_notification_title</string>
    <string name="unmount_success_toast_title">@*android:string/external_ep_storage_safe_unmount_toast_message</string>
    <string name="unmount_error_dialog_title">@*android:string/external_ep_storage_error_unmount_dialog_title</string>
    <string name="unmount_error_dialog_message">@*android:string/external_ep_storage_error_unmount_dialog_message</string>
    <string name="ext_media_safe_unmount_notification_title">@*android:string/external_ep_storage_safe_unmount_notification_title</string>
    <string name="ext_media_safe_unmount_notification_message">@*android:string/external_ep_storage_safe_unmount_notification_message</string>
    <string name="ext_media_badremoval_notification_title">@*android:string/external_ep_storage_badremoval_notification_title</string>
    <string name="ext_media_badremoval_notification_message">@*android:string/external_ep_storage_badremoval_notification_message</string>
    <string name="ext_media_unmountable_notification_title">@*android:string/ext_ep_media_unmountable_notification_title</string>
    <string name="ext_media_unmountable_notification_message">@*android:string/ext_ep_media_unmountable_notification_message</string>
    <string name="ext_media_nofs_notification_title">@*android:string/ext_ep_media_nofs_notification_title</string>
    <string name="ext_media_nofs_notification_message">@*android:string/ext_ep_media_nofs_notification_message</string>
    <string name="sim1_mode">SIM1</string>
    <string name="sim2_mode">SIM2</string>
    <string name="config_statusBarComponent">com.android.systemui.statusbar.phone.AsusPhoneStatusBar</string>
    <string name="system_ui_date_pattern">@*android:string/system_ui_date_pattern</string>
    <string name="status_bar_date_formatter">%1$s</string>
    <string name="app_label">System UI</string>
    <string name="status_bar_clear_all_button">Clear</string>
    <string name="status_bar_recent_remove_item_title">Remove from list</string>
    <string name="status_bar_recent_inspect_item_title">App info</string>
    <string name="status_bar_no_recent_apps">No recent apps</string>
    <string name="status_bar_accessibility_dismiss_recents">Dismiss recent apps</string>
    <string name="status_bar_no_notifications_title">No notifications</string>
    <string name="status_bar_ongoing_events_title">Ongoing</string>
    <string name="status_bar_latest_events_title">Notifications</string>
    <string name="battery_low_title">Connect charger</string>
    <string name="battery_low_subtitle">"The battery is getting low.
Some features may not be functional in low battery mode."</string>
    <string name="battery_low_percent_format">%d%% remaining</string>
    <string name="invalid_charger">"USB charging not supported.
Use only the supplied charger."</string>
    <string name="battery_low_why">Battery use</string>
    <string name="status_bar_settings_settings_button">Settings</string>
    <string name="status_bar_settings_wifi_button">Wi-Fi</string>
    <string name="status_bar_settings_airplane">Airplane mode</string>
    <string name="status_bar_settings_auto_rotation">Auto-rotate screen</string>
    <string name="status_bar_settings_mute_label">MUTE</string>
    <string name="status_bar_settings_auto_brightness_label">AUTO</string>
    <string name="status_bar_settings_notifications">Notifications</string>
    <string name="status_bar_settings_battery_meter_format">%d%%</string>
    <string name="status_bar_network_name_separator">|</string>
    <string name="bluetooth_tethered">Bluetooth tethered</string>
    <string name="status_bar_input_method_settings_configure_input_methods">Set up input methods</string>
    <string name="status_bar_use_physical_keyboard">Physical keyboard</string>
    <string name="usb_device_permission_prompt">Allow the app %1$s to access the USB device?</string>
    <string name="accessibility_notifications_button">Notifications.</string>
    <string name="accessibility_desc_quick_settings">Quick settings.</string>
    <string name="quickpanel_wifi_text">Wi-Fi</string>
    <string name="quickpanel_bluetooth_text">Bluetooth</string>
    <string name="quickpanel_gps_text">GPS</string>
    <string name="quickpanel_data_text">"Data
Connection"</string>
    <string name="quickpanel_sync_text">"Auto
Sync"</string>
    <string name="quickpanel_rotate_text">"Screen
Rotation"</string>
    <string name="quickpanel_sound_text">Sound</string>
    <string name="quickpanel_vibrate_text">Vibration</string>
</resources>