<?xml version="1.0" encoding="utf-8"?>
<com.dell.omni.TimeBGo android:orientation="vertical" android:id="@id/time_bgo" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:paddingLeft="15.0dip" android:paddingTop="1.0dip" android:paddingRight="15.0dip" android:paddingBottom="1.0dip" android:layout_width="fill_parent" android:layout_height="45.0dip">
        <in.jmkl.dcsms.statusbargreper.SlideBrightness android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="100.0dip">
        <FrameLayout android:gravity="left" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
            <ImageView android:layout_gravity="top|center" android:id="@id/quickpanel_wifi_btn_icon" android:layout_width="30.0dip" android:layout_height="30.0dip" android:src="@drawable/quickpanel_icon_wifi_off" />
            <RelativeLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent">
                <ImageView android:gravity="bottom|center" android:id="@id/garis" android:paddingLeft="15.0dip" android:paddingRight="15.0dip" android:layout_width="fill_parent" android:layout_height="1.0dip" android:src="#99ffffff" android:layout_below="@id/quickpanel_wifi_btn_icon" />
            </RelativeLayout>
            <com.mda.Ltoggle.WifiSettingButton android:textSize="12.0dip" android:gravity="bottom|center" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginBottom="20.0px" android:text="@string/quickpanel_wifi_text" />
        </FrameLayout>
        <FrameLayout android:gravity="right" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
            <ImageView android:layout_gravity="top|center" android:id="@id/quickpanel_bluetooth_btn_icon" android:layout_width="30.0dip" android:layout_height="30.0dip" android:src="@drawable/quickpanel_icon_bluetooth_off" />
            <RelativeLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent">
                <ImageView android:gravity="bottom|center" android:id="@id/garis" android:paddingLeft="15.0dip" android:paddingRight="15.0dip" android:layout_width="fill_parent" android:layout_height="1.0dip" android:src="#99ffffff" android:layout_below="@id/quickpanel_bluetooth_btn_icon" />
            </RelativeLayout>
            <com.mda.Ltoggle.BluetoothSettingButton android:textSize="12.0dip" android:gravity="bottom|center" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginBottom="20.0px" android:text="@string/quickpanel_bluetooth_text" />
        </FrameLayout>
    </LinearLayout>
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="90.0dip">
        <FrameLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
            <ImageView android:layout_gravity="top|center" android:id="@id/quickpanel_data_btn_icon" android:layout_width="30.0dip" android:layout_height="30.0dip" android:src="@drawable/quickpanel_icon_data_off" />
            <RelativeLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent">
                <in.jmkl.dcsms.statusbargreper.DataTrafik android:textColor="#ffffffff" android:gravity="bottom|center" android:layout_width="fill_parent" android:layout_height="fill_parent" />
            </RelativeLayout>
            <com.mda.Ltoggle.MobileDataSettingButton android:textSize="12.0dip" android:gravity="bottom|center" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginBottom="30.0px" android:text="@string/quickpanel_data_text" />
        </FrameLayout>
        <FrameLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
            <ImageView android:layout_gravity="top|center" android:id="@id/quickpanel_gps_btn_icon" android:layout_width="30.0dip" android:layout_height="30.0dip" android:src="@drawable/quickpanel_icon_gps_off" />
            <com.mda.Ltoggle.GpsSettingButton android:textSize="12.0dip" android:gravity="bottom|center" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginBottom="30.0px" android:text="@string/quickpanel_gps_text" />
        </FrameLayout>
        <FrameLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
            <ImageView android:layout_gravity="top|center" android:id="@id/quickpanel_rotate_btn_icon" android:layout_width="30.0dip" android:layout_height="30.0dip" android:src="@drawable/quickpanel_icon_rotate_off" />
            <com.mda.Ltoggle.AutoRotationSettingButton android:textSize="12.0dip" android:gravity="bottom|center" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginBottom="30.0px" android:text="@string/quickpanel_rotate_text" />
        </FrameLayout>
    </LinearLayout>
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="90.0dip">
        <FrameLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
            <ImageView android:layout_gravity="top|center" android:id="@id/quickpanel_sync_btn_icon" android:layout_width="30.0dip" android:layout_height="30.0dip" android:src="@drawable/quickpanel_icon_sync_off" />
            <com.mda.Ltoggle.SyncSettingButton android:textSize="12.0dip" android:gravity="bottom|center" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginBottom="30.0px" android:text="@string/quickpanel_sync_text" />
        </FrameLayout>
        <FrameLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
            <ImageView android:layout_gravity="top|center" android:id="@id/quickpanel_sound_btn_icon" android:layout_width="30.0dip" android:layout_height="30.0dip" android:src="@drawable/quickpanel_icon_sound_off" />
            <com.mda.Ltoggle.SoundSettingButton android:textSize="12.0dip" android:gravity="bottom|center" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginBottom="30.0px" android:text="@string/quickpanel_sound_text" />
        </FrameLayout>
        <FrameLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
            <ImageView android:layout_gravity="top|center" android:id="@id/quickpanel_vibrate_btn_icon" android:layout_width="30.0dip" android:layout_height="30.0dip" android:src="@drawable/quickpanel_icon_vibrate_off" />
            <com.mda.Ltoggle.VibrateSettingButton android:textSize="12.0dip" android:gravity="bottom|center" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginBottom="30.0px" android:text="@string/quickpanel_vibrate_text" />
        </FrameLayout>
    </LinearLayout>
</com.dell.omni.TimeBGo>