<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/header" android:background="#00000000" android:paddingLeft="@dimen/asus_quicksetting_panel_header_padding_left" android:paddingTop="@dimen/asus_quicksetting_panel_header_padding_top" android:paddingRight="@dimen/asus_quicksetting_panel_header_padding_left" android:paddingBottom="@dimen/asus_quicksetting_panel_header_padding_bottom" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:systemui="http://schemas.android.com/apk/res/com.android.systemui">
    <com.android.systemui.statusbar.policy.QuickSettingsClock android:id="@id/datetime" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/asus_quicksetting_clock_margin_top" android:layout_alignParentLeft="true">
        <com.android.systemui.statusbar.policy.AsusClockTextView android:textSize="@dimen/asus_quicksetting_clock_date_textsize" android:textStyle="bold" android:textColor="@color/asus_quicksetting_time_text_color" android:id="@id/timeDisplay" android:layout_width="wrap_content" android:layout_height="wrap_content" android:singleLine="true" />
        <com.android.systemui.statusbar.policy.AsusClockTextView android:textSize="@dimen/asus_quicksetting_clock_ampm_textsize" android:textStyle="bold" android:textColor="@color/asus_quicksetting_time_text_color" android:id="@id/am_pm" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/asus_quicksetting_clock_ampm_margin" android:singleLine="true" />
    </com.android.systemui.statusbar.policy.QuickSettingsClock>
    <com.android.systemui.statusbar.policy.QuickSettingsDateView android:textSize="0.0dip" android:textStyle="normal" android:textColor="#00000000" android:id="@id/asus_date" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:includeFontPadding="false" android:layout_below="@id/datetime" android:layout_alignLeft="@id/datetime" android:fontFamily="sans-serif-light" />
    <com.eboy.basit.EboyDateBar android:textSize="14.0sp" android:textColor="#ddffffff" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="4.0px" android:layout_marginTop="0.0dip" android:layout_below="@id/datetime" />
    <TextView android:textSize="11.0dip" android:textStyle="bold" android:textColor="#ff00a040" android:layout_gravity="center_vertical" android:id="@id/header_debug_info" android:padding="2.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:fontFamily="sans-serif-condensed" />
    <FrameLayout android:paddingTop="4.8399963dip" android:layout_width="28.0dip" android:layout_height="28.0dip" android:layout_marginRight="2.0dip" android:layout_weight="1.0" android:layout_toLeftOf="@id/quick_settings_settings_button" layout_alignTop="@id/quick_settings_settings_button">
        <com.maxdev.systemui.WeatherIcon android:layout_gravity="center" android:id="@id/maxdev_weather_icon" android:layout_width="25.0dip" android:layout_height="25.0dip" />
        <com.bros.aokp.TabToggleButton android:id="@id/show2" android:layout_width="30.0dip" android:layout_height="30.0dip" android:layout_marginTop="0.0px" android:layout_below="@id/maxdev_weather_icon" />
    </FrameLayout>
    <com.erhany.KitKatBattery android:id="@id/battery" android:paddingTop="3.689972dip" android:layout_width="23.0dip" android:layout_height="23.0dip" android:layout_marginLeft="20.0dip" android:layout_marginRight="25.0dip" android:layout_toLeftOf="@id/quick_settings_settings_button" android:layout_alignTop="@id/quick_settings_settings_button" />
    <ImageView android:id="@id/quick_settings_edit_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginRight="55.0dip" android:src="@drawable/asus_quick_settings_notify_editpage" android:scaleType="center" android:layout_toLeftOf="@id/quick_settings_settings_button" android:layout_alignTop="@id/quick_settings_settings_button" />
    <ImageView android:id="@id/quick_settings_settings_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="1.0dip" android:src="@drawable/asus_quick_settings_notify_setting" android:scaleType="center" android:layout_toLeftOf="@id/settings_button_holder" android:layout_alignTop="@id/settings_button_holder" />
    <FrameLayout android:id="@id/settings_button_holder" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/asus_quicksetting_button_margin_top" android:layout_alignParentTop="true" android:layout_alignParentRight="true">
        <ImageView android:id="@id/settings_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_notify_quicksettings" android:scaleType="center" android:contentDescription="@string/accessibility_desc_quick_settings" />
        <ImageView android:id="@id/notification_button" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_notifications" android:scaleType="center" android:contentDescription="@string/accessibility_notifications_button" />
    </FrameLayout>
    <FrameLayout android:id="@id/panel_title_holder" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/asus_notification_panel_title_margin_top" android:layout_below="@id/asus_date" android:layout_alignParentLeft="true">
        <TextView android:textSize="0.0dip" android:textColor="#00000000" android:id="@id/notification_title" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/asus_notification_title" android:fontFamily="sans-serif" />
        <TextView android:textSize="0.0dip" android:textColor="#00000000" android:id="@id/quicksettings_title" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/asus_notification_title" android:fontFamily="sans-serif" />
    </FrameLayout>
</RelativeLayout>